solve the problem of not responsive on tiny screens

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,10 @@
+@media screen and (max-width: 170px) {
+  .upper-activities .personal-photo, .social .personal-photo {
+    width: 100px;
+  }
+}
+
+
 @media screen and (min-width: 700px) {
   
   .left {
